--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,18 +1,7 @@
-$dark-blue: #03050d;
+$dark-blue: #2e3192;
+$purple-blue: #23233c;
+$main-blue: #425cdb;
+
+$white-blue: #f2f3f6;
 $white-gray: #dfdede;
 $white: #fff;
-$light-gray: #ECECEC;
-$light-purple: #aa9c9b;
-$gray: #575757;
-$almost-white: #f3f3f3;
-$pink: #b26363;
-$green: #6ca99b;
-$yellow: #aba121;
-
-
-$beige: #f6f6f6;
-
-$light-green: #eff3ee;
-$purple: #9c4a95;
-$smoke: #837e84;
-$blue: #4849a4;
