--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,6 +1,7 @@
+$really-dark-blue: #0f113a;
 $dark-blue: #2e3192;
-$purple-blue: #23233c;
-$main-blue: #425cdb;
+$main-blue: #2b47ad;
+$main-blue-light: #425cdb;
 
 $white-blue: #f2f3f6;
 $white-gray: #dfdede;
