--- a/sass/style.scss
+++ b/sass/style.scss
@@ -94,10 +94,11 @@ h2 {
   color: $dark-blue;
   @include fontSemiBold;
   font-size: 28px;
+  margin-top: 0px;
 }
 
 section {
-  padding: 40px 0px;
+  padding: 70px 0px;
 }
 
 p {
@@ -142,7 +143,6 @@ nav {
   background-position: 30px -75px;
   height: 600px;
   .about-content {
-    margin-top: 20px;
     line-height: 25px;
     margin-bottom: 40px;
     p {
@@ -177,7 +177,23 @@ nav {
   h2 {
     color: $white;
   }
-
+  .solution-box {
+    margin-top: 30px;
+    p {
+      font-size: 15px;
+      padding-right: 50px;
+    }
+    .solutionIcon {
+      img {
+        width: 50px;
+      }
+    }
+    .design_border {
+      img {
+        width: 35px;
+      }
+    }
+  }//.solution-box
 }//.ourSolutions
 
 // **** FOOTER **** //
