testimonials, updates on about us, and tagline on header

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -2,6 +2,10 @@ $really-dark-blue: #0f113a;
 $dark-blue: #2e3192;
 $main-blue: #2b47ad;
 $main-blue-light: #425cdb;
+$blue-grey: #dee2ef;
+$red-pink: #ff3c32;
+$red-pink-light: #ff806b;
+$red-pink-dark: #f92116;
 
 $white-blue: #f2f3f6;
 $white-gray: #dfdede;
