--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,6 @@
 
 * { -moz-box-sizing: border-box; /* Firexfox */ -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */ box-sizing: border-box; /* IE */ }
 
-.clearfix:after { content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0; }
-
 .clear { clear: both; }
 
 .alignright { float: right; padding: 0 0 10px 10px; }
@@ -34,6 +32,14 @@ p { font-family: 'proxima_novalight', Helvetica, Arial, sans-serif; font-weight:
 
 #header { background: url(../images/header_bg2_placeholder.png) no-repeat #0f113a; height: 800px; background-size: 100%; }
 
+#header .headerContent h1 { font-size: 60px; margin-top: 100px; margin-bottom: 10px; color: #fff; }
+
+#header .headerContent h5 { font-size: 40px; color: #fff; margin-top: 5px; margin-bottom: 40px; font-family: 'proxima_novalight', Helvetica, Arial, sans-serif; font-weight: 200; }
+
+#header .headerContent a.learnMore { background-color: #ff3c32; border-radius: 30px; padding: 13px 7px; max-width: 180px; display: block; color: #fff; display: block; text-align: center; }
+
+#header .headerContent a.learnMore:hover { background-color: #f92116; }
+
 nav li { float: left; padding: 19px; margin-top: 45px; }
 
 nav li a { text-decoration: none; color: white; letter-spacing: 0.8px; }
@@ -42,15 +48,23 @@ nav #asi-logo { padding-top: 25px; }
 
 nav #asi-logo img { display: block; width: 120px; height: auto; }
 
-.aboutUs { background: url(../images/aboutUs_bg.png) no-repeat #f2f3f6; background-size: 100%; background-position: 30px -75px; height: 600px; }
+.aboutUs { background: url(../images/aboutUs_bg.png) no-repeat #f2f3f6; background-size: 100%; }
 
 .aboutUs .about-content { line-height: 25px; margin-bottom: 40px; }
 
 .aboutUs .about-content p { color: #2b47ad; font-family: 'proxima_novalight', Helvetica, Arial, sans-serif; font-weight: 200; font-size: 18px; }
 
-.aboutUs .aboutInfo { text-align: center; }
+.aboutUs .aboutInfo { text-align: center; margin-bottom: 40px; }
 
-.aboutUs .aboutInfo .aboutIcon img { width: 50px; }
+.aboutUs .aboutInfo .aboutIconSection .aboutIcon img { width: 50px; }
+
+.aboutUs .aboutInfo .aboutIconSection .design_border img { width: 35px; }
+
+.aboutUs .aboutInfo .aboutIconSection.mapIcon { margin-left: 90px; }
+
+.aboutUs .aboutInfo .aboutIconSection.consultingIcon { margin-left: 140px; }
+
+.aboutUs .aboutInfo .aboutIconSection.calendarIcon { margin-left: 47px; }
 
 .aboutUs .aboutInfo .aboutNumber { font-family: 'proxima_novasemibold', Helvetica, Arial, sans-serif; font-weight: 800; font-size: 75px; color: #2e3192; }
 
@@ -77,3 +91,17 @@ nav #asi-logo img { display: block; width: 120px; height: auto; }
 .ourVerticals .vertical-box .verticalIcon img { width: 50px; }
 
 .ourVerticals .vertical-box .design_border img { width: 35px; }
+
+.ourTestimonials { background-color: #fff; }
+
+.ourTestimonials .testimonial-box { background-color: #dee2ef; padding: 30px 30px 60px 30px; }
+
+.ourTestimonials .testimonial-box .quotes { text-align: center; }
+
+.ourTestimonials .testimonial-box .quotes img { width: 50px; }
+
+.ourTestimonials .testimonial-box .test_author { background-color: #425cdb; border-radius: 30px; padding: 10px 7px; max-width: 250px; display: block; margin: auto; margin-bottom: -81px; margin-top: 50px; border-bottom: 2px solid #ff3c32; }
+
+.ourTestimonials .testimonial-box .test_author .personName { color: #fff; text-align: center; display: block; font-size: 14px; }
+
+.ourTestimonials .testimonial-box .test_author .personTitle { color: #fff; text-align: center; display: block; font-family: 'proxima_novalight', Helvetica, Arial, sans-serif; font-weight: 200; font-size: 11px; }
